--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       name="keywords"
       content="Camisetas, Botines, Tienda, Futbol, Retros, Retro, Actuales, Belgrano, Boca, River"
     />
-    <link rel="shortcut icon" href="/images/logo.jpg" />
+    <link rel="shortcut icon" href="./images/logo.jpg" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -154,6 +154,5 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <script src="js/index.js"></script>
   </body>
 </html>
